main file added

--- a/WebApp.ipynb
+++ b/WebApp.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "gpuClass": "standard",
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,10 +13,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -40,53 +21,73 @@
         "id": "3unJvGZkG-YI",
         "outputId": "d79b16cb-945c-4d06-8a47-2d3f2808293d"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "8MfeVYrUFmX2"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import re\n",
         "import torch "
-      ],
-      "metadata": {
-        "id": "8MfeVYrUFmX2"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Loading the saved model\n",
-        "saved_model = torch.load('/content/drive/MyDrive/Research/ER model/banglaER')"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "o1XYv2QPGVwr"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Loading the saved model\n",
+        "saved_model = torch.load('/content/drive/MyDrive/Research/ER model/banglaER')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Writing Streamlit App"
-      ],
       "metadata": {
         "id": "oRSb3Uz_Bu8P"
-      }
+      },
+      "source": [
+        "## Writing Streamlit App"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sV92sNOAJ2Ww",
+        "outputId": "b58ac841-2286-4a8d-8396-d53f9338cf45"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting app.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile app.py\n",
         "import streamlit as st\n",
@@ -174,73 +175,52 @@
         "st.text(\"\")\n",
         "\n",
         "st.write(\"Copyright © 2023 Dynamic DUO.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sV92sNOAJ2Ww",
-        "outputId": "b58ac841-2286-4a8d-8396-d53f9338cf45"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting app.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Deploying the WebApp"
-      ],
       "metadata": {
         "id": "dFePyJSxBcoa"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pyngrok import ngrok"
-      ],
-      "metadata": {
-        "id": "72SimsEiGshB"
       },
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "ngrok.set_auth_token(\"2KUdDPf7fH3TXkqlSyj69A0wmZz_6NL8czBcnbEG6qcMBr5gK\") #ngrok.com"
-      ],
-      "metadata": {
-        "id": "_CPKuv2GJJsZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "872a0ff6-0968-45e6-8f11-bcac2ac22266"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": []
-        }
+        "## Deploying the WebApp"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "72SimsEiGshB"
+      },
+      "outputs": [],
       "source": [
-        "!nohup streamlit run app.py --server.port 80 &\n",
-        "url = ngrok.connect(port = '80')\n",
-        "print(url)"
+        "from pyngrok import ngrok"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_CPKuv2GJJsZ",
+        "outputId": "872a0ff6-0968-45e6-8f11-bcac2ac22266"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": []
+        }
       ],
+      "source": [
+        "ngrok.set_auth_token(AUTH_TOKEN) #ngrok.com"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -248,17 +228,37 @@
         "id": "0PKjJab8JUWG",
         "outputId": "a5a3c903-8430-4109-92b8-3b83801b9fa0"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "nohup: appending output to 'nohup.out'\n",
             "NgrokTunnel: \"http://0b17-34-73-243-214.ngrok.io\" -> \"http://localhost:80\"\n"
           ]
         }
+      ],
+      "source": [
+        "!nohup streamlit run app.py --server.port 80 &\n",
+        "url = ngrok.connect(port = '80')\n",
+        "print(url)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
